fixed the C code execution

--- a/templates/practice/problem.html
+++ b/templates/practice/problem.html
@@ -1290,7 +1290,7 @@
 
     <!-- ======================================== Copy Text Function ================================================ -->
 
-    <script>
+    <!-- <script>
         document.addEventListener('copy', function (event) {
             event.preventDefault(); // Prevent the default copy behavior
 
@@ -1300,7 +1300,7 @@
             // Set the custom text into the clipboard
             event.clipboardData.setData('text/plain', copiedTextToCopy);
         });
-    </script>
+    </script> -->
 
 
     {% endblock %}
