--- a/templates/practice/sheet.html
+++ b/templates/practice/sheet.html
@@ -199,7 +199,7 @@ active
                                     {% else %}
 
                                     <button class="btn btn-dark" disabled>
-                                        LOCKED
+                                        LOCKED🔒
                                     </button>
 
                                     {% endif %}
