--- a/templates/404.html
+++ b/templates/404.html
@@ -99,7 +99,7 @@ html, body {
             
             <p>the page you are looking for not avaible!</p>
             
-            <a href="#" class="link_404">Go to Home</a>
+            <a href="/" class="link_404">Go to Home</a>
         </div>
             </div>
             </div>
