--- a/templates/administration/batch/batch.html
+++ b/templates/administration/batch/batch.html
@@ -176,6 +176,9 @@ active
             
                 <a href="{% url 'administrator_batch_enrollment_requests' batch.slug %}"
                 class="btn btn-outline-warning button mt-n3 m-3 w-25">Enrollment Requests</a>
+
+                <a href="{% url 'administrator_batch_leaderboard' batch.slug %}"
+                class="btn btn-outline-secondary button mt-n3 m-3 w-25">Leaderboard</a>
         </div>
     </div>
 
