Started Samadhaan AI again

--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -456,7 +456,7 @@
                         </li>
 
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="{% url 'doubt_solver' %}" aria-expanded="false">
+                            <a class="sidebar-link" href="{% url 'ask_doubt' %}" aria-expanded="false">
                                 <span>
                                     <i class="ti ti-help"></i>
                                 </span>
